--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurace Zavirukha</title>
+    <title>About Us - Restaurace Zavirukha</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -35,6 +35,12 @@
         .content {
             padding: 30px;
             font-size: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: left;
+        }
+        .content h2 {
+            color: #d32f2f;
         }
         footer {
             background-color: #333;
@@ -52,12 +58,14 @@
         <a href="menu.html">Menu</a>
         <a href="about.html">About Us</a>
     </nav>
-    <header>Vítejte v naší restauraci Zavirukha</header>
+    <header>About Us</header>
     <div class="content">
-        <h2>Domovská stránka</h2>
-        <p>Vítejte v naší restauraci, kde podáváme nejlepší jídla z čerstvých surovin. Přijďte si vychutnat naši skvělou atmosféru a lahodné pokrmy.</p>
+        <h2>O naší restauraci</h2>
+        <p>Restaurace Zavirukha je místem, kde se setkává vynikající kuchyně s příjemnou atmosférou. Naším cílem je přinášet hostům nejen skvělé jídlo, ale také zážitek, který si zapamatují.</p>
+        <h2>Kde nás najdete?</h2>
+        <p>Chrudim, Reselovo náměstí 123</p>
     </div>
-    <img src="restaurant2.jpg" alt="Smoothie" height="200" width="320">
+    <img src="restaurant.jpg" alt="Smoothie" height="300" width="700">
     <footer>&copy; 2025 Restaurace Zavirukha. Všechna práva jsou vyhrazena.</footer>
 </body>
 </html>
